<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Anywear</string>
    <string name="connected">The connection is successful</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_not_bind_info">Please connect the device</string>
    <string name="device_connecting">Connecting...</string>
    <string name="device_connect_fail">Connection failed</string>
    <string name="test_heart_rate_start">Start</string>
    <string name="test_heart_rate_stop">Stop</string>
    <string name="title_heart_rate_measure">Heart rate measurement</string>
    <string name="title_profile">User personal information</string>
    <string name="FUNC_GET_GPV">Get protocol version</string>
    <string name="FUNC_GET_VERSION">Get Version</string>
    <string name="FUNC_GET_BATTERY">Get Battery</string>
    <string name="FUNC_GET_TIME">Get Time</string>
    <string name="FUNC_SET_TIME">synchronize time</string>
    <string name="FUNC_GET_TIMEZONE">Get time zone</string>
    <string name="FUNC_SET_TIMEZONE">Set time zone</string>
    <string name="FUNC_SET_TIME_MODE">Set time display mode</string>
    <string name="log">Log</string>
    <string name="clear">Clear</string>
    <string name="walle_ble_ble_not_supported">Bluetooth is not supported</string>
    <string name="walle_ble_need_location">Need to request location permission</string>
    <string name="walle_ble_location_warn">Please allow location information, otherwise some functions will not work properly. </string>
    <string name="walle_ble_unknown_device">unknown device</string>
    <string name="walle_ble_scan">Scan</string>
    <string name="walle_ble_bind_device">Bind device</string>
    <string name="walle_ble_stop">Stop</string>
    <string name="toast_device_not_connected">The device is not connected</string>
    <string name="measure_hr_open">Open heart rate measurement</string>
    <string name="measure_hr_close">Close measuring heart rate</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="FUNC_SET_LANG">Set Language</string>
    <string name="FUNC_SET_UNIT">Set unit</string>
    <string name="FUNC_SET_PROMPT">Enable Prompt</string>
    <string name="FUNC_GET_RESTING_HR">Get resting heart rate of the day</string>
    <string name="FUNC_SET_FEMALE_PHYSIOLOGY">Set female physiological status</string>
    <string name="FUNC_VIBRATION">Vibration reminder switch</string>
    <string name="FUNC_SET_WRIST_BRIGHT_SCREEN">Switch to raise the wrist to brighten the screen</string>
    <string name="FUNC_SET_DATA_STREAM">Monitor data stream switch</string>
    <string name="FUNC_SET_HIGH_SPEED_CONNECT">High speed connection / low speed connection</string>
    <string name="FUNC_SWITCH_HR_RATE">heart rate switch</string>
    <string name="FUNC_PUSH_CUSTOM_DIAL">Custom dial push</string>
    <string name="FUNC_PUSH_CUSTOM_SPORT">Sports Push</string>
    <string name="FUNC_CAMERA"> instant camera </string>
    <string name="FUNC_CAMERA_MODEL">Camera mode</string>
    <string name="FUNC_FIND_DEVICE">Find device</string>
    <string name="FUNC_FIND_PHONE">Find phone</string>
    <string name="FUNC_GIVE_UP_FIND_DEVICE">Give up to find the phone</string>
    <string name="FUNC_BREAK_DEVICE">Disconnect</string>
    <string name="find_phone">Find phone</string>
    <string name="FUNC_REBOOT_DEVICE">Reboot device</string>
    <string name="FUNC_RESET">Restore factory settings</string>
    <string name="FUNC_SHUTDOWN">soft shutdown</string>
    <string name="FUNC_OTA">Start OTA upgrade</string>
    <string name="FUNC_SAFETY_CONFIRM">Safety Confirmation</string>
    <string name="FUNC_SELF_INSPECTION_MODE">Self-inspection mode</string>
    <string name="FUNC_CLEAR_USER_INFO">Clear user information</string>
    <string name="FUNC_CLEAR_SPORT">Clear sports data</string>
    <string name="FUNC_PAGE_SKIP">page jump</string>
    <string name="FUNC_MUSIC_VOLUME">music volume</string>
    <string name="FUNC_MUSIC_CONTROL">Music Control</string>
    <string name="FUNC_MUSIC_PROGRESS">music progress</string>
    <string name="stream_data">stream data &amp; OTA upgrade &amp; dial push</string>
    <string name="FUNC_GET_HARDWARE_INFO">Get hardware information</string>
    <string name="FUNC_GET_DAYS_REPORT">Get daily activity statistics</string>
    <string name="FUNC_GET_MEARURE_INFO">Get real-time measurement data</string>
    <string name="FUNC_GET_EXERCISE_LIST">Get exercise record list/get exercise statistics report</string>
    <string name="FUNC_GET_EXERCISE_REPORT">Get exercise statistics report</string>
    <string name="FUNC_GET_HEARTRATE_RECORD">Get Heart Rate Record</string>
    <string name="FUNC_SET_HR_WARN_PARA">Abnormal heart rate reminder setting</string>
    <string name="FUNC_GET_EXERCISE_DETAIL">Exercise Details Record</string>
    <string name="FUNC_GET_EXER_GPS_DETAIL">Get sports positioning records</string>
    <string name="FUNC_GET_PERSONAL_INFO">User personal information</string>
    <string name="FUNC_GET_SEDENTARY_PARA">Sedentary judgment parameters</string>
    <string name="FUNC_SET_HRLEV_ALGO_PARA">heart rate level judgment parameters</string>
    <string name="FUNC_GET_SEDENTARY_DRINK_PARA">Sedentary and drinking reminder settings</string>
    <string name="FUNC_SET_DRINK_WATER_PARA">Drink water reminder parameters</string>
    <string name="FUNC_SET_DONT_DISTURB_PARA">Do not disturb parameters</string>
    <string name="FUNC_SET_HR_CHECK_PARA">heart rate detection parameters</string>
    <string name="FUNC_SET_LIFTWRIST_PARA">Lift Wrist Bright Screen Parameters</string>
    <string name="FUNC_SET_TARGET_SET">Motion target parameters</string>
    <string name="FUNC_SET_TIMING_INFO">alarm clock information</string>
    <string name="FUNC_GET_APPS_MESS">App social message push</string>
    <string name="FUNC_GET_HOURS_REPORT">hourly activity statistics</string>
    <string name="FUNC_GET_SLEEP_REPORT">Sleep statistics report</string>
    <string name="FUNC_GET_SLEEP_RECORD">Sleep state record</string>
    <string name="FUNC_GET_STEPS_RECORD">Get step record</string>
    <string name="FUNC_GET_SPO2_RECORD">Get Blood Oxygen Record</string>
    <string name="FUNC_GET_MENTALSTRESS_RECORD">Get mental stress record</string>
    <string name="FUNC_GET_BLOODPRESSURE_RECORD">Get blood pressure records</string>
    <string name="set">Setting</string>
    <string name="FUNC_WEATHER">Push weather news</string>
    <string name="FUNC_WEATHER_DETAIL">Push weather message details</string>
    <string name="FUNC_STRU_CALL_DATA">Incoming call message</string>
    <string name="FUNC_STRU_MUSIC_CONT">Push current song information</string>
    <string name="FUNC_LOCATION_INFORMATION">Push location information</string>
    <string name="FUNC_GET_HAND_MEASURE_INFO">Get manual measurement records</string>
    <string name="updateota">ota upgrade</string>
    <string name="message_type_para">Push message switch parameter information</string>
    <string name="emptyData">The data is empty</string>
    <string name="funcQrcode">QR code scanning information:</string>
    <string name="receiverBytes" />
    <string name="sendBytes" />
    <string name="FUNC_GET_CUR_SLEEP_RECORD" >Get real-time sleep record</string>
    <string name="FUNC_RECEIVE_FUNC" >Get real-time sleep records</string>
    <string name="FUNC_GET_EXERCISE_GPS" >GPS exercise data exchange</string>
    <string name="FUNC_GPS_SPORT_CMD">GPS sports data interaction</string>
    <string name="FUNC_QUICK_REPLY_CMD">Quick reply</string>
    <string name="FUNC_FLASH_WRITE_CMD">Write specified data to off-chip flash space</string>
    <string name="FUNC_COMPRESS_CMD">File compression transmission</string>
    <string name="FUNC_GET_UI_VERSION">Get UI version</string>
    <string name="FUNC_GET_BURIED_DATA">Get device buried point data</string>
    <string name="FUNC_SYN_PHONE_BOOK">Synchronize Phonebook</string>
    <string name="FUNC_ONLINE_DIAL_PUSH">Online dial push (03F4)</string>
    <string name="FUNC_MSG_TASK">message queue data flow</string>
    <string name="FUNC_GET_FLASH_DATA">Read off-chip flash space data</string>
    <string name="FUNC_SHUTDOWN_STATE">Set automatic shutdown after restart</string>
    <string name="FUNC_PUSH_QLZ_DATA">App pushes any qlz compressed data (03F5)</string>
    <string name="FUNC_GET_HRPS_DETAIL">GET exercise high frequency heart rate record (0186)</string>
    <string name="FUNC_SET_BLOOD_OXYGEN_SWITCH">Set blood oxygen detection switch</string>
    <string name="FUNC_SET_MENTAL_STRESS_SWITCH">Set mental stress detection switch</string>
    <string name="FUNC_SET_HEART_RATE_SWITCH">Set heart rate detection switch</string>
    <string name="FUNC_SET_CALL_AUDIO_SWITCH">Set call audio switch</string>
    <string name="FUNC_SET_MEDIA_AUDIO_SWITCH">Set media audio switch</string>
    <string name="FUNC_GET_CALL_AUDIO_SWITCH">Get call audio switch</string>
    <string name="FUNC_GET_MEDIA_AUDIO_SWITCH">Get media audio switch</string>
    <string name="FUNC_PUSH_MORE_CUSTOM_SPORT">Multi-sport push</string>
    <string name="FUNC_GPS_DATA_MONITOR">GPS data stream monitoring switch</string>
    <string name="FUNC_GAME_DATA_MONITOR">Monitor game data stream switch</string>
    <string name="at_cmd">AT command</string>
    <string name="big_data_cmd">Big data command</string>
    <string name="get_start_time">Get start time</string>
    <string name="get_end_time">Get end time</string>
    <string name="set_female_health_data">Set up female health data</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="time_format_12">12 hours</string>
    <string name="time_format_24">24 hours</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="spain">spain</string>
    <string name="italy">Italy</string>
    <string name="portugal">Portugal</string>
    <string name="russian">Russian</string>
    <string name="period_days">Period days</string>
    <string name="period_days_tip">Please enter a number from 3-15 days</string>
    <string name="cycle_days">Cycle days</string>
    <string name="cycle_days_tips">Please enter a number from 17-60 days</string>
    <string name="last_menstrual_period">Last menstrual period</string>
    <string name="health_settings">Health settings</string>
    <string name="health_settings_tips">(0 Off, 1 Period Mode, 2 Pregnancy Mode, 3 Pregnancy Mode) Please enter a number</string>
    <string name="pregnancy_reminder_mode">Pregnancy Reminder Mode</string>
    <string name="pregnancy_reminder_mode_tips">(0 days of pregnancy, 1 days of due date) Please enter a number</string>
    <string name="menstruation_start_reminder">Menstruation start reminder</string>
    <string name="menstruation_start_reminder_tips">(1-3 days in advance) Please enter the number</string>
    <string name="device_reminder">Device reminder</string>
    <string name="reminder_time">Reminder time</string>
    <string name="reminder_time_tips">Please enter the absolute number of minutes (60)</string>
    <string name="save">Save</string>
    <string name="women_health_data">Query women‘s health data</string>
    <string name="synchronization">One-click data synchronization</string>
    <string name="push_more_sport_tip">Please place the sports files that need to be packaged and pushed under the %1$s directory under the SD card, Please put the built-in motion files in the %2$s directory.</string>
    <string name="pack">Pack</string>
    <string name="push_progress">push progress：</string>
    <string name="FUNC_HAISI_TEST">HiSilicon test entrance</string>
</resources>