<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/period_days"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_menstrual_days"
            android:background="@null"
            android:hint="@string/period_days_tip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/cycle_days"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_cycle_days"
            android:background="@null"
            android:hint="@string/cycle_days_tips"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/last_menstrual_period"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_date"
            android:background="@null"
            android:hint="yyyy/MM/dd"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/health_settings"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_health_settings"
            android:background="@null"
            android:hint="@string/health_settings_tips"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/pregnancy_reminder_mode"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_pregnancy_reminder_mode"
            android:background="@null"
            android:hint="@string/pregnancy_reminder_mode_tips"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/menstruation_start_reminder"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_reminder_days"
            android:background="@null"
            android:hint="@string/menstruation_start_reminder_tips"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/device_reminder"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/switch_open"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:text="@string/reminder_time"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_reminder_time"
            android:background="@null"
            android:hint="@string/reminder_time_tips"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <Button
        android:id="@+id/btn_get"
        android:text="@string/women_health_data"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

</LinearLayout>