<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/ivTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"/>

    <TextView
        app:layout_constraintLeft_toLeftOf="@+id/ivTop"
        android:id="@+id/tvActionConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivTop"
        app:layout_constraintTop_toTopOf="@+id/ivTop"
        android:text="@string/connect"
        android:textColor="@android:color/white" />

    <TextView
        app:layout_constraintLeft_toRightOf="@+id/tvActionConnect"
        android:id="@+id/tvClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivTop"
        app:layout_constraintTop_toTopOf="@+id/ivTop"
        android:text="@string/clear"
        android:textColor="@android:color/white" />



    <TextView
        android:id="@+id/tvDeviceStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text=""
        android:singleLine="false"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/tvClear"
        app:layout_constraintRight_toLeftOf="@+id/tvAppVersion"
        app:layout_constraintTop_toTopOf="@id/ivTop"
        app:layout_constraintBottom_toBottomOf="@id/ivTop"/>

    <TextView
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/tvQrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivTop"
        app:layout_constraintTop_toTopOf="@+id/ivTop"
        android:text="@string/walle_ble_scan"
        android:textColor="@android:color/white" />

    <TextView
        app:layout_constraintRight_toLeftOf="@+id/tvQrcode"
        android:id="@+id/tvLog"
        android:layout_marginEnd="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivTop"
        app:layout_constraintTop_toTopOf="@+id/ivTop"
        android:text="@string/log"
        android:textColor="@android:color/white" />
    <TextView
        app:layout_constraintRight_toLeftOf="@+id/tvLog"
        android:id="@+id/tvAppVersion"
        android:layout_marginEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivTop"
        app:layout_constraintTop_toTopOf="@+id/ivTop"
        android:textColor="@android:color/white" />
    <View
        android:id="@+id/logBg"
        app:layout_constraintTop_toBottomOf="@+id/ivTop"
        android:layout_margin="10dp"
        android:background="@drawable/shape_main"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <LinearLayout
        android:id="@+id/llBottom"
        app:layout_constraintTop_toBottomOf="@+id/logBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStartTime"
            android:text="@string/get_start_time"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnEndTime"
            android:text="@string/get_end_time"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <ListView
        android:id="@+id/recycleMain"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="@id/logBg"
        app:layout_constraintRight_toRightOf="@id/logBg"
        app:layout_constraintBottom_toBottomOf="@id/logBg"
        app:layout_constraintTop_toTopOf="@+id/logBg"
        android:layout_width="0dp"
        android:layout_height="0dp"/>



    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ExpandableListView
                android:id="@+id/expandView"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/llBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_menstrual_period"
                android:text="@string/set_female_health_data"
                android:padding="16dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_synchronous_data"
                android:text="@string/synchronization"
                android:padding="16dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_haisi_test"
                android:text="@string/FUNC_HAISI_TEST"
                android:padding="16dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_chatgpt"
                android:text="Rtk ChatGpt"
                android:padding="16dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_jsi_test"
                android:text="JSI 协议测试"
                android:padding="16dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
             <TextView android:visibility="gone"
                android:id="@+id/tv_ai_test"
                android:text="AI 接口测试"
                android:padding="16dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

  </androidx.constraintlayout.widget.ConstraintLayout>
